--- a/Desafioss/src/app/app/desafio1/desafio1.component.html
+++ b/Desafioss/src/app/app/desafio1/desafio1.component.html
@@ -1,2 +1,2 @@
 <p>desafio1 works!</p>
-<input type="text" pInputText  formControlName="text" />
+<form [formGroup]="formGroup" (ngSubmit)="pesquisar()"> <input type="text" pInputText  formControlName="text" /></form>
